fix: change spacing between adiacent elements

--- a/src/scss/base/_root.scss
+++ b/src/scss/base/_root.scss
@@ -380,7 +380,7 @@
   --#{$prefix}spacing-stack-s: var(--dsi-spacing-stack-s);
   --#{$prefix}spacing-stack-xs: var(--dsi-spacing-stack-xs);
   --#{$prefix}heading-spacing: var(--dsi-spacing-stack-s);
-  --#{$prefix}paragraph-spacing: var(--dsi-spacing-stack-l);
+  --#{$prefix}paragraph-spacing: var(--dsi-spacing-stack-m);
   
   // Typography
   --#{$prefix}font-mono: var(--dsi-font-mono);
